--- a/ExtMvcDeo.Tests/ExtMvcDeo.Tests.csproj
+++ b/ExtMvcDeo.Tests/ExtMvcDeo.Tests.csproj
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -93,6 +99,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccessTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
@@ -106,6 +113,10 @@
     <ProjectReference Include="..\ExtMvcDeo\ExtMvcDeo.csproj">
       <Project>{A5FD08CA-1CD4-4646-B9AF-5B150ECD6C3C}</Project>
       <Name>ExtMvcDeo</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\YX.DataAccess\YX.DataAccess.csproj">
+      <Project>{5ba8dce6-e655-4422-8851-0acfe041daea}</Project>
+      <Name>YX.DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
