--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\ExtMvcDeo.Tests\packages.config" />
   <repository path="..\ExtMvcDeo\packages.config" />
+  <repository path="..\YX.DataAccess\packages.config" />
 </repositories>
