--- a/Yx.Service.Baisc/Web.config
+++ b/Yx.Service.Baisc/Web.config
@@ -9,19 +9,48 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="Yx.Service.Baisc.Interfaces.BasicService"  behaviorConfiguration="CustomBehavior">
+        <endpoint address="" binding="wsHttpBinding" contract="Yx.Service.Baisc.Interfaces.IBasicService"
+                  bindingConfiguration="CustomHttpBinding">
+          <identity>
+            <dns value="YxServer"/>
+          </identity>
+        </endpoint>
+      </service>
+    </services>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="CustomHttpBinding">
+          <security mode="Message">
+            <message clientCredentialType="Certificate"/>
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
-        <behavior>
+        <behavior name="CustomBehavior">
           <!-- 为避免泄漏元数据信息，请在部署前将以下值设置为 false -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <!-- 要接收故障异常详细信息以进行调试，请将以下值设置为 true。在部署前设置为 false 以避免泄漏异常信息 -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceCredentials>
+            <clientCertificate>
+              <authentication  certificateValidationMode="None"/>
+            </clientCertificate>
+            <serviceCertificate  findValue="YxServer"
+                                  x509FindType="FindBySubjectName"
+                                  storeLocation="LocalMachine"
+                                   storeName="My"/>
+          </serviceCredentials>
+
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
+      <add binding="basicHttpsBinding" scheme="https" />
+    </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
