--- a/Yx.ServiceProxy.Basic/app.config
+++ b/Yx.ServiceProxy.Basic/app.config
@@ -1,15 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IBasicService" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:2446/BasicService.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IBasicService" contract="BasicService.IBasicService"
-                name="BasicHttpBinding_IBasicService" />
-        </client>
-    </system.serviceModel>
+  <system.serviceModel>
+    <client>
+      <endpoint address="http://localhost:2446/BasicService.svc"
+                 binding="wsHttpBinding" bindingConfiguration="CustomHttpBinding"
+                 behaviorConfiguration="CustomBehavior" contract="ServiceRefence"  name="WSHttpBinding_IService">
+        <identity>
+          <dns  value="YxServer"/>
+        </identity>
+      </endpoint>
+    </client>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="CustomHttpBinding"
+                 closeTimeout="00:01:00"
+                 openTimeout="00:01:00"
+                 receiveTimeout="00:01:00"
+                 sendTimeout="00:01:00"
+                 bypassProxyOnLocal="false"
+                 transactionFlow="false"
+                 hostNameComparisonMode="StrongWildcard"
+                 maxBufferPoolSize="524288"
+                 maxReceivedMessageSize="65536000"
+                 messageEncoding="Text"
+                 textEncoding="utf-8"
+                 useDefaultWebProxy="true"
+                 allowCookies="false">
+          <security mode="Message">
+            <message clientCredentialType="Certificate"/>
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="CustomBehavior">
+          <clientCredentials>
+            <clientCertificate findValue="YxClient"
+                               x509FindType="FindBySubjectName"
+                               storeLocation="LocalMachine"
+                               storeName="My"/>
+            <serviceCertificate>
+              <authentication certificateValidationMode="None"/>
+            </serviceCertificate>
+          </clientCredentials>
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
+  </system.serviceModel>
 </configuration>
