--- a/Yx.Service.Baisc/Web.config
+++ b/Yx.Service.Baisc/Web.config
@@ -8,9 +8,18 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5"/>
   </system.web>
+
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true"/>
+    <!--
+        若要在调试过程中浏览 Web 应用程序根目录，请将下面的值设置为 True。
+        在部署之前将该值设置为 False 可避免泄露 Web 应用程序文件夹信息。
+      -->
+    <directoryBrowse enabled="true"/>
+  </system.webServer>
   <system.serviceModel>
     <services>
-      <service name="Yx.Service.Baisc.Interfaces.BasicService"  behaviorConfiguration="CustomBehavior">
+      <service  name="Yx.Service.Baisc.BasicService"  behaviorConfiguration="CustomBehavior">
         <endpoint address="" binding="wsHttpBinding" contract="Yx.Service.Baisc.Interfaces.IBasicService"
                   bindingConfiguration="CustomHttpBinding">
           <identity>
@@ -44,7 +53,6 @@
                                   storeLocation="LocalMachine"
                                    storeName="My"/>
           </serviceCredentials>
-
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -53,13 +61,4 @@
     </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
-  <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
-    <!--
-        若要在调试过程中浏览 Web 应用程序根目录，请将下面的值设置为 True。
-        在部署之前将该值设置为 False 可避免泄露 Web 应用程序文件夹信息。
-      -->
-    <directoryBrowse enabled="true"/>
-  </system.webServer>
-
 </configuration>
