--- a/Yx.ServiceProxy.Basic/app.config
+++ b/Yx.ServiceProxy.Basic/app.config
@@ -1,45 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
   <system.serviceModel>
-    <client>
-      <endpoint address="http://localhost:2446/BasicService.svc"
-                 binding="wsHttpBinding" bindingConfiguration="CustomHttpBinding"
-                 behaviorConfiguration="CustomBehavior" contract="ServiceRefence"  name="WSHttpBinding_IService">
-        <identity>
-          <dns  value="YxServer"/>
-        </identity>
-      </endpoint>
-    </client>
-    <bindings>
-      <wsHttpBinding>
-        <binding name="CustomHttpBinding"
-                 closeTimeout="00:01:00"
-                 openTimeout="00:01:00"
-                 receiveTimeout="00:01:00"
-                 sendTimeout="00:01:00"
-                 bypassProxyOnLocal="false"
-                 transactionFlow="false"
-                 hostNameComparisonMode="StrongWildcard"
-                 maxBufferPoolSize="524288"
-                 maxReceivedMessageSize="65536000"
-                 messageEncoding="Text"
-                 textEncoding="utf-8"
-                 useDefaultWebProxy="true"
-                 allowCookies="false">
-          <security mode="Message">
-            <message clientCredentialType="Certificate"/>
-          </security>
-        </binding>
-      </wsHttpBinding>
-    </bindings>
+    <bindings />
+    <client />
     <behaviors>
       <endpointBehaviors>
-        <behavior name="CustomBehavior">
+        <!--增加一个证书验证-->
+        <behavior name="mye">
           <clientCredentials>
-            <clientCertificate findValue="YxClient"
-                               x509FindType="FindBySubjectName"
-                               storeLocation="LocalMachine"
-                               storeName="My"/>
+            <!--其实这里findvalue的证书填写TestServer也可以，没有作验证只要有一个证书就行-->
+            <clientCertificate  findValue="YxClient" storeName="My"  storeLocation="LocalMachine"
+                                  x509FindType="FindBySubjectName"/>
             <serviceCertificate>
               <authentication certificateValidationMode="None"/>
             </serviceCertificate>
